# congenial_dataform

./: .gitignore  README.md
datastructures/stack/: CMakeLists.txt  stack.c  stack.h
datastructures/stack/examples/: CMakeLists.txt  evaluate_postfix_expression.c  parking_garage.c
ds/stack/: CMakeLists.txt  test_stack.c
ds/stack/examples/: CMakeLists.txt  evaluate_prefix_expression.c  implement_static_array_with_2_stack.c  infix_to_postfix_expression.c  is_the_equation_valid.c  machine_with_one_register.c
